
Moved focus to SQL Editor when it gets visible through previous Session / next Session navigation (Alt left/right)

Fixed class not found exception in Oracle Plugin when setting Session Time Zone.
Thanks to Neville Rowe


2946165: preferences messages not translatable
2946160: translation missing in refactoring
2944128: remote not translatable
2942351: Program doesn't launch
2879711: Fix for Excel date export concerning dates earlier than 1900-03-01.
 		 Thanks to mironsadziak for the patch (Patch ID 2905218)
2853329: Ctrl-S overwrites existing file on 2nd try
2819161:  squirrel-sql.sh in plain zip had an errant apostrophe.  Tested this fix on MacOS 10 and Ubuntu 9.04.  
         Thanks to Jonathan James for vetting the anonymously submitted patch.
2818117 ("Make Editable" uses column label instead of name)
		 Thanks to Christian Gruenberg for the patch (Patch ID 2924887)
2801011: Sybase (CREATE TABLE script generate decimal(15,2) instead of (15,4))
2794860: Sybase (CREATE TABLE script generate numeric(15) instead (15,2))
2754166: SQLScript plugin loses precision for Timestamp in H2
2746982: Error occured in IPlugin.sessionEnded() for SQL Parametrisation
2713952: Create table script (on Sybase): Always generate "datetime" type for "date" (and datetime)
2657987: Session was closed even if session closing confirm dialog was not confirmed. Connection was not 
         closed then.

ArrayIndexOutOfBounds exception occured when more than one Alias was deleted form Alias tree  

Fixed startup error:
 java.lang.NullPointerException
 at ... .AliasFolderState.applyExpansionAndSelectionToNode(AliasFolderState.java:144)

Error in Alias tree: Alias vanished or gave an error when dragged on itself.

SQL Scripts Plugin:
 - Several scripting functions did not respect global scripting preferences about qualifying tables.
 - When generating insert scripts from a SQL statement the global
   preference "Qualify table names in generated scripts with the schema name" did not work.